# galaktika_bot

./: .gitignore  README.md  bot.py  docker-compose.yml  pyproject.toml
